[gd_scene load_steps=43 format=3 uid="uid://7l0cfov3ci1w"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_2yj6i"]
[ext_resource type="Texture2D" uid="uid://hhejvl7dux7m" path="res://assets/sheets/DinoSprites - vita.png" id="2_qe2x3"]
[ext_resource type="AudioStream" uid="uid://dxu8pdl3uw13j" path="res://sounds/Audio/footstep00.ogg" id="3_ojeyi"]
[ext_resource type="AudioStream" uid="uid://b4nm6q0dslo23" path="res://sounds/Audio/footstep01.ogg" id="4_36b8u"]
[ext_resource type="AudioStream" uid="uid://ciu7lsikkvgqo" path="res://sounds/Audio/footstep02.ogg" id="5_s5e33"]
[ext_resource type="AudioStream" uid="uid://cjm4ol0lvl047" path="res://sounds/Audio/footstep03.ogg" id="6_xsvn2"]
[ext_resource type="AudioStream" uid="uid://bm534hxrvky7r" path="res://sounds/Audio/footstep04.ogg" id="7_fw408"]
[ext_resource type="AudioStream" uid="uid://ds8mxrowmetpd" path="res://sounds/Audio/footstep05.ogg" id="8_rr4e4"]
[ext_resource type="AudioStream" uid="uid://bw4cgqgq03jyp" path="res://sounds/Audio/footstep06.ogg" id="9_ikmdo"]
[ext_resource type="AudioStream" uid="uid://bo4o8cdpynrnq" path="res://sounds/Audio/footstep07.ogg" id="10_p1vvd"]
[ext_resource type="AudioStream" uid="uid://bajepo2kw8l4a" path="res://sounds/Audio/footstep08.ogg" id="11_cvtnl"]
[ext_resource type="AudioStream" uid="uid://du6vpdsccb6vo" path="res://sounds/Audio/footstep09.ogg" id="12_3plov"]
[ext_resource type="AudioStream" uid="uid://c5qwaah1s6jl0" path="res://sounds/jump.ogg" id="13_jbjap"]
[ext_resource type="AudioStream" uid="uid://cjikubvhdwonx" path="res://sounds/mixkit-air-woosh-1489.ogg" id="14_8j73k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ninuc"]
atlas = ExtResource("2_qe2x3")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoarq"]
atlas = ExtResource("2_qe2x3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6bty"]
atlas = ExtResource("2_qe2x3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4wyp"]
atlas = ExtResource("2_qe2x3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d0ai"]
atlas = ExtResource("2_qe2x3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ivn"]
atlas = ExtResource("2_qe2x3")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_osrh2"]
atlas = ExtResource("2_qe2x3")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xu3f"]
atlas = ExtResource("2_qe2x3")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8jv"]
atlas = ExtResource("2_qe2x3")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuux7"]
atlas = ExtResource("2_qe2x3")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_os2tr"]
atlas = ExtResource("2_qe2x3")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvkbo"]
atlas = ExtResource("2_qe2x3")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g53qc"]
atlas = ExtResource("2_qe2x3")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_867do"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ninuc")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_yoarq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6bty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4wyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d0ai")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3ivn")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_osrh2")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xu3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuux7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os2tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvkbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g53qc")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nci1d"]
radius = 3.0
height = 7.6

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rtglr"]
radius = 1.3
height = 4.4

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p6wgh"]
radius = 1.35
height = 4.45

[sub_resource type="Curve" id="Curve_7ng7r"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.247557, 1), 0.0, 0.0, 0, 0, Vector2(0.745928, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_2m741"]
curve = SubResource("Curve_7ng7r")

[sub_resource type="Gradient" id="Gradient_ylx02"]
colors = PackedColorArray(0.591526, 0.710287, 0.865466, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_soqjg"]
gradient = SubResource("Gradient_ylx02")

[sub_resource type="Curve" id="Curve_v0vhv"]
_data = [Vector2(0, 0.228814), 0.0, 2.73863, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_q6671"]
curve = SubResource("Curve_v0vhv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0sugk"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_max = 10.0
gravity = Vector3(0, -10, 0)
scale_min = 2.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_q6671")
color = Color(0.596078, 0.658824, 0.756863, 0.333333)
color_ramp = SubResource("GradientTexture1D_soqjg")
alpha_curve = SubResource("CurveTexture_2m741")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_a5emm"]
random_pitch = 1.2
random_volume_offset_db = 3.0
streams_count = 10
stream_0/stream = ExtResource("3_ojeyi")
stream_1/stream = ExtResource("4_36b8u")
stream_2/stream = ExtResource("5_s5e33")
stream_3/stream = ExtResource("6_xsvn2")
stream_4/stream = ExtResource("7_fw408")
stream_5/stream = ExtResource("8_rr4e4")
stream_6/stream = ExtResource("9_ikmdo")
stream_7/stream = ExtResource("10_p1vvd")
stream_8/stream = ExtResource("11_cvtnl")
stream_9/stream = ExtResource("12_3plov")

[sub_resource type="Animation" id="Animation_ail8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RemoteTransform2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1c4eo"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RemoteTransform2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.122173, 0.122173]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_np13j"]
_data = {
"RESET": SubResource("Animation_ail8g"),
"run": SubResource("Animation_1c4eo")
}

[node name="Player" type="CharacterBody2D"]
z_index = 6
position = Vector2(0, -7)
motion_mode = 1
script = ExtResource("1_2yj6i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_867do")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.83116

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("CapsuleShape2D_nci1d")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../AnimatedSprite2D")

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 5.3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 1)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_rtglr")
debug_color = Color(0.766797, 0.421859, 0.407957, 0.42)

[node name="ProtectBox" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 5.3)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProtectBox"]
position = Vector2(0, 1)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_p6wgh")
debug_color = Color(0.238567, 0.616133, 0.463359, 0.42)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 6)
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_0sugk")
lifetime = 0.6
explosiveness = 0.1

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayerWalk" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_a5emm")
volume_db = -30.0
pitch_scale = 1.8
bus = &"Walking&Jump"

[node name="AudioStreamPlayerJump" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("13_jbjap")
volume_db = -13.249
bus = &"Walking&Jump"

[node name="AudioStreamPlayerFall" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("14_8j73k")
volume_db = -17.0
bus = &"Walking&Jump"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_np13j")
}
